Updated Title and Introduction

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="container">
 	<div id="header">
 		<a href="#" class="menu header-btn" id="toggle-toc"></a>
-		<h1>NativeScript Quick Start</h1>
+		<h1>UI for ASP.NET MVC Quick Start</h1>
 		<a href="https://github.com/NativeScript/quick-start" class="github header-btn"></a>
 	</div>
 
@@ -28,14 +28,16 @@
 		<div id="book">
 			<div class="chapter">
 				<h2 id="introduction">Introduction</h2>
-<p>Welcome to the <a href="http://www.telerik.com/aspnet-mvc">UI for ASP.NET MVC</a> quick-start guide. In this guided tutorial you&#39;ll learn how to install, configure, and add the UI for ASP.NET MVC to your application.</p>
+<p>Welcome to the <a href="http://www.telerik.com/aspnet-mvc">UI for ASP.NET MVC</a> quick-start guide. In this guided tutorial you&#39;ll learn how to install, configure, and utilize UI for ASP.NET MVC to build a rich single page dashboard application that works beautifully on any device.</p>
 <h3 id="what-you-ll-learn">What you&#39;ll learn</h3>
 <p>This guide will walk you through a series of tutorials that will teach you the following things:</p>
 <ul>
-<li>Lorem Ipsum</li>
-<li>Lorem Ipsum</li>
-<li>Lorem Ipsum</li>
-<li>Lorem Ipsum</li>
+<li>Adding UI for MVC to your project</li>
+<li>Using Kendo Grid, DatePicker, Responsive Panel and Chart controls</li>
+<li>Utilize UI for MVC&#39;s scaffolding to quickly create, customize, and populate data Grid view.</li>
+<li>Add and customize a Kendo ListView using Kendo templates</li>
+<li>Client and server side programming using Kendo datasource and Ajax</li>
+<li>Responsive web design and theming</li>
 </ul>
 <h3 id="important-resources">Important Resources</h3>
 <p><a href="http://docs.telerik.com/kendo-ui/aspnet-mvc/introduction">Documentation</a>
