--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <div id="container">
 	<div id="header">
 		<a href="#" class="menu header-btn" id="toggle-toc"></a>
-		<h1>NativeScript Quick Start</h1>
+		<h1>UI for ASP.NET MVC Quick Start</h1>
 		<a href="https://github.com/NativeScript/quick-start" class="github header-btn"></a>
 	</div>
 
