--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 <li>Responsive web design and theming</li>
 </ul>
 <h3 id="important-resources">Important Resources</h3>
-<p><a href="http://docs.telerik.com/kendo-ui/aspnet-mvc/introduction">Documentation</a>
-<a href="http://docs.telerik.com/KENDO-UI/api/aspnet-mvc/Kendo.Mvc/AggregateFunction">UI for MVC API References</a>
-<a href="http://www.telerik.com/account/support-tickets/my-support-tickets.aspx">Support</a></p>
+<ul>
+<li><a href="http://docs.telerik.com/kendo-ui/aspnet-mvc/introduction">Documentation - UI for ASP.NET MVC</a></li>
+<li><a href="http://docs.telerik.com/KENDO-UI/api/aspnet-mvc/Kendo.Mvc/AggregateFunction">API References - UI for ASP.NET MVC</a></li>
+<li><a href="http://www.telerik.com/account/support-tickets/my-support-tickets.aspx">Support</a></li>
+</ul>
 
 			</div>
 			<hr>
