--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 			<div class="chapter">
 				<h2 id="introduction">Introduction</h2>
 <p>Welcome to the <a href="http://www.telerik.com/aspnet-mvc">UI for ASP.NET MVC</a> quick-start guide. In this guided tutorial you&#39;ll learn how to install, configure, and utilize UI for ASP.NET MVC to build a rich single page dashboard application that works beautifully on any device.</p>
-<h3 id="what-you-ll-learn">What you&#39;ll learn</h3>
-<p>This guide will walk you through a series of tutorials that will teach you the following things:</p>
+<h3 id="what-you-re-building">What you&#39;re building</h3>
+<p>This guide will walk you through building Team Efficiency Dashboard, a single page app that does the following things:</p>
 <ul>
-<li>Adding UI for MVC to your project</li>
-<li>Using Kendo Grid, DatePicker, Responsive Panel and Chart controls</li>
-<li>Utilize UI for MVC&#39;s scaffolding to quickly create, customize, and populate data Grid view.</li>
-<li>Add and customize a Kendo ListView using Kendo templates</li>
-<li>Client and server side programming using Kendo datasource and Ajax</li>
-<li>Responsive web design and theming</li>
+<li>Connects rich chart visualizations and grids to a SQL datasource</li>
+<li>Provides an interactive master/detail dashboard with filtering, sorting and exporting</li>
+<li>Responsds to any device size including: mobile, tablet and desktop</li>
 </ul>
+<h3 id="ui-for-asp-net-mvc-vs-kendo-ui-widgets">UI for ASP.NET MVC vs Kendo UI widgets</h3>
+<p>From client-side point of view, the vanilla HTML/JavaScript <strong>Kendo UI</strong> widgets and the rendered <strong>UI for ASP.NET MVC</strong> represent the same thing and provide the same capabilities.
+However, the UI for ASP.NET MVC wrappers provide additional capaiblites for use with ASP.NET MVC and tooling for VisualStudio. Refer to the <a href="http://docs.telerik.com/kendo-ui/aspnet-mvc/kendo-ui-vs-mvc-wrappers">documentation</a> for a complete feature comparison.</p>
 <h3 id="important-resources">Important Resources</h3>
 <ul>
 <li><a href="http://docs.telerik.com/kendo-ui/aspnet-mvc/introduction">Documentation - UI for ASP.NET MVC</a></li>
@@ -49,9 +49,40 @@
 			</div>
 			<hr>
 			<div class="chapter">
-				<h2 id="ui-for-mvc-vs-kendo-ui">UI for MVC vs Kendo UI</h2>
+				<h2 id="asp-net-mvc-wrappers-ui-helpers-vs-kendo-ui-widgets">ASP.NET MVC wrappers (UI helpers) vs Kendo UI widgets</h2>
 <p>In this chapter...</p>
-<h3 id="sub-step">Sub Step</h3>
+<p>From client-side point of view, the vanilla HTML/JavaScript Kendo UI widgets and their ASP.NET MVC wrappers (UI helpers) represent the same thing and provide the same capabilities.
+However, there are some implementation specifics to consider before choosing one product over the other.</p>
+<p>The <strong>UI for ASP.NET MVC</strong> helpers (Kendo UI MVC wrappers) provide the following benefits:</p>
+<ul>
+<li>Create widgets with no HTML and JavaScript coding. JavaScript knowledge will still be required to use client-side methods and events.</li>
+<li><a href="/kendo-ui/aspnet-mvc/helpers/grid/server-binding">Server-side data binding</a> and in some cases, server-side rendering.</li>
+<li>Use the <a href="/kendo-ui/aspnet-mvc/helpers/grid/ajax-binding">ToDataSourceResult</a> extension method to bind Kendo UI widgets to server-side collections and
+perform data operations (paging, sorting, filtering, grouping).</li>
+<li>Integration with some ASP.NET MVC features, e.g. <a href="/kendo-ui/aspnet-mvc/helpers/menu/overview#security-trimming">security trimming</a> or
+<a href="/kendo-ui/aspnet-mvc/globalization#localized-user-interface">localization with resource files</a> or <a href="/kendo-ui/aspnet-mvc/helpers/grid/editor-templates">editor templates</a>.</li>
+<li>Support for unobtrusive validation based on Data Annotation attributes.</li>
+<li>CRUD operations implementation simplicity - support for CRUD operations will require less coding, compared to when client-side Kendo UI is used.
+In the latter case, you will have to repeat the model and data field configuration in the JavaScript code.</li>
+<li>Visual Studio intellisense for the server-side configuration syntax.</li>
+<li><a href="/kendo-ui/aspnet-mvc/vs-integration/introduction">Visual Studio Extensions</a> for automatic creation of new Kendo UI ASP.NET MVC applications, or adding Kendo UI to existing projects,
+or automatic updating of the Kendo UI version.</li>
+<li>Use <a href="/kendo-ui/aspnet-mvc/scaffolding">Scaffolding</a> to generate widget declarations and related controller action methods.</li>
+</ul>
+<p>The vanilla HTML/JavaScript Kendo UI widgets (<strong>Kendo UI Professional</strong>) provide the following benefits:</p></p>
+<ul>
+<li>Complete server platform independence. The widgets can be used with any web server and server framework (<strong>including ASP.NET MVC</strong>).
+For example, you can build Single Page Applications with any RESTful back-end.</li>
+<li>Full control over the initialization scripts&#39; placement - server wrappers render the widgets&#39; initialization scripts right after the widget&#39;s HTML output.
+Even if you use <a href="/kendo-ui/aspnet-mvc/fundamentals#deferred-initialization">deferred initialization</a>, the scripts will still be in the View.
+When using plain (non-wrapper) Kendo UI widgets, you write the initialization scripts yourself and can move them to external script files.</li>
+<li>Integration with <a href="/kendo-ui/framework/mvvm/overview">MVVM</a>, <a href="/kendo-ui/AngularJS/introduction">AngularJS</a> and <a href="/kendo-ui/framework/spa/overview">Single Page Application</a> development patterns.
+Server wrappers are not intended to be used with those.</li>
+<li><p><a href="/kendo-ui/vs-intellisense">Visual Studio Intellisense</a> for the client-side API.</p>
+</li>
+<li><p>Finally, there is no problem to use UI for ASP.NET MVC helpers and vanilla Kendo UI widgets <strong>at the same time on the same page</strong>, if a specific scenario requires that.</p>
+</li>
+</ul>
 
 			</div>
 			<hr>
