--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@ However, the UI for ASP.NET MVC wrappers provide additional capaiblites for use 
 				<h2 id="getting-up-and-running">Getting up and running</h2>
 <p>In this chapter you&#39;re going to start with the basics, including starting a new project, adding UI for MVC to your project, and installing the quick start template.</p>
 <h3 id="create-a-new-mvc-project">Create a new MVC project</h3>
-<h3 id="install-the-quick-start-primer-template">Install the quick start primer template</h3>
+<p>UI for ASP.NET MVC can easily be added to an existing ASP.NET MVC project in just a few clicks using VisualStudio. </p>
+<p>Start by creating a new ASP.NET MVC project. You&#39;ll use this project throughout the rest of this tutorial to build your application.</p>
+<h3 id="install-the-quick-start-boilerplate">Install the quick start boilerplate</h3>
+<p>With the new project created, it&#39;s time to start building your app. For this guide, we&#39;ve scaffolded out a boilerplate project to act as a starting point for the Team Efficiency Dashboard.</p>
+<p>The boilerplate has an HTML page, the Northwind database and some server-side code you may find in a typical MVC project.</p>
+<p>Exercise:</p>
+<p>PM&gt; Install-Package KendoQsBoilerplate</p>
 <h3 id="convert-to-telerik-application">Convert to Telerik Application</h3>
 
 			</div>
