--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>NativeScript Quick Start</title>
+	<title>Telerik UI for ASP.NET MVC Quick Start</title>
 
 	<meta charset="utf-8">
 	<meta name="description" content="A quick-start guide for NativeScript CLI apps">
